[gd_scene load_steps=12 format=3 uid="uid://bqlmgvbsou231"]

[ext_resource type="PackedScene" uid="uid://c0eo82adv7gd0" path="res://scenes/ship.tscn" id="1_87gbl"]
[ext_resource type="Texture2D" uid="uid://crb143t4sv03d" path="res://assets/background/planet.jpeg" id="2_m85pd"]
[ext_resource type="FontFile" uid="uid://c4c7awnpvvdux" path="res://assets/fonts/quaver.ttf" id="3_vi1va"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="4_ddsvd"]
[ext_resource type="PackedScene" uid="uid://plmt0tbeiycb" path="res://scenes/station.tscn" id="5_lovqj"]
[ext_resource type="PackedScene" uid="uid://grlgbnw4f61m" path="res://scenes/asteroid.tscn" id="6_ywbp5"]
[ext_resource type="PackedScene" uid="uid://buvietb3wse14" path="res://scenes/debris.tscn" id="7_ita1m"]
[ext_resource type="PackedScene" uid="uid://cop6vdsnbpu8f" path="res://scenes/laser.tscn" id="8_pbr08"]
[ext_resource type="PackedScene" uid="uid://vgvlko2psnn1" path="res://scenes/player_ui.tscn" id="9_ahu8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yh750"]
size = Vector2(18, 1096)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qokhb"]
size = Vector2(1936, 12)

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 542)
scale = Vector2(1, 1.0037)
texture = ExtResource("2_m85pd")

[node name="Ship" parent="." instance=ExtResource("1_87gbl")]
position = Vector2(899, 400)

[node name="Camera2D" type="Camera2D" parent="Ship"]
zoom = Vector2(1.3, 1.3)
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
position_smoothing_enabled = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 13.0
offset_right = 806.0
offset_bottom = 280.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vi1va")
theme_override_font_sizes/font_size = 50
text = "TEST 0.1 OF GODOT SPACE GAME
ESC
F5/F9
Movement:
WASD
"

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_ddsvd")

[node name="Station" parent="." instance=ExtResource("5_lovqj")]
position = Vector2(296, 496)

[node name="Asteroid" parent="." instance=ExtResource("6_ywbp5")]
position = Vector2(336, 264)

[node name="Debris" parent="." instance=ExtResource("7_ita1m")]
position = Vector2(232, 264)

[node name="Laser" parent="." instance=ExtResource("8_pbr08")]
position = Vector2(416, 272)

[node name="WorldBorder" type="StaticBody2D" parent="."]

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="WorldBorder"]
position = Vector2(-9, 540)
shape = SubResource("RectangleShape2D_yh750")

[node name="CollisionShapeRight" type="CollisionShape2D" parent="WorldBorder"]
position = Vector2(1929, 544)
shape = SubResource("RectangleShape2D_yh750")

[node name="CollisionShapeBottom" type="CollisionShape2D" parent="WorldBorder"]
position = Vector2(968, 1090)
shape = SubResource("RectangleShape2D_qokhb")

[node name="CollisionShapeTop" type="CollisionShape2D" parent="WorldBorder"]
position = Vector2(952, -6)
shape = SubResource("RectangleShape2D_qokhb")

[node name="Player_UI" parent="." instance=ExtResource("9_ahu8o")]

[connection signal="credits_change" from="Ship" to="Player_UI" method="_on_ship_credits_change"]
[connection signal="energy_change" from="Ship" to="Player_UI" method="_on_ship_energy_change"]
[connection signal="storage_change" from="Ship" to="Player_UI" method="_on_ship_storage_change"]
